Fix alignment of translations

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -240,7 +240,7 @@ ul.all-translations {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: end;
+  justify-content: right;
   align-items: center;
   li {
     margin-left: 0.75em;
